learning git routes

--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -7,7 +7,7 @@
 
    <body>
        <header>
-           <h1>Angie's favorite things</h1>
+           <h1>Angie's Favorite Things</h1>
            <ul>
             <li>Taylor Swift</li>
             <li>Sailor moon</li>
