--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -2,6 +2,7 @@
 
 <html>
    <head>
+       <link rel="stylesheet" type="text/css" href="style.css">
       <title>My favorite things</title>
    </head>
 
@@ -10,25 +11,26 @@
            <h1>Angie's Favorite Things</h1>
            <ul>
             <li>Taylor Swift</li>
-            <li>Sailor moon</li>
-            <li>Poke`mon</li>
+            <li>Sailor Moon</li>
+            <li>Pokémon</li>
         </ul>
         </header>
 
-        <main>
-            <article>
-                <img src="https://upload.wikimedia.org/wikipedia/en/f/f0/Taylor_Swift_-_Taylor_Swift_%28deluxe_version%29.jpg" alt="Taylor swifts first album cover">
-                <p>Ever since Taylor dropped her first album I have been a fan. I think shes a great person, she's just a normal human being that made it. Her music always seems to explain my feelings so well &amp; no one else can do it like she can.</p><br>
+       <main>
+            <article id="taylor-swift">
+                <img class="interest-image" src="images/taytay.jpg" alt="Taylor Swift">
+                <p>Ever since Taylor dropped her first album I have been a fan. I think shes a great person, she's just a normal human being that made it. Her music always seems to explain my feelings so well &amp; no one else can do it like she can.</p>
             </article>
     
-            <article>
-                <img src="https://unicornofwar.files.wordpress.com/2016/07/sm-crystal.jpg?w=348&h=491" alt="The Sailor Guardians">
-                <p>Sailor Moon has been a love of mine since I was a child. I've never stopped loving it. This is a show that has taught me so much. It's shown me the importance of friendship,self love,kindness, and so much more.It'really shaped me into the person I am today and I am very grateful</p><br>
+            <article id="sailor-moon">
+                <img class="interest-image" src="images/sm_mid.jpg" alt="The Sailor Guardians">
+                <p>Sailor Moon has been a love of mine since I was a child. I've never stopped loving it. This is a show that has taught me so much. It's shown me the importance of friendship,self love,kindness, and so much more.It'really shaped me into the person I am today and I am very grateful</p>
             </article>
     
-            <article>
-                <img src="https://cdn02.nintendo-europe.com/media/images/10_share_images/games_15/game_boy_4/H2x1_GB_PokemonYellow_enGB_image1600w.jpg" alt="Pikachu yellow">
-                <p>My love for Poke`mon all started with Poke`mon yellow. I have purchased every single poke`mon game that Nintendo has released over and over again. The games aren't really different in any way and I'm still buying them and I don't know why. I guess I love them too much.</p></article>
+            <article id="pokemon">
+                <img class="interest-image" src="images/pokemon_gb.jpg" alt="Pikachu yellow">
+                <p>My love for Pokémon all started with Pokémon yellow. I have purchased every single pokémon game that Nintendo has released over and over again. The games aren't really different in any way and I'm still buying them and I don't know why. I guess I love them too much.</p>
+            </article>
         </main>
 
         <footer>
